# swift-corelibs-multitasking

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  PATCHES  Package.swift  README.md
Sources/Multitasking/: AsyncAwaitSupport.swift  CombineShim.swift  CombineSupport.swift  DeadlineScheduler.swift  FairScheduler.swift  LoadBalancer.swift  PerformanceMonitor.swift  PriorityScheduler.swift  SwiftConcurrencyInterop.swift  Task.swift  TaskScheduler.swift  ThreadJoinExtension.swift  ThreadManager.swift
Sources/multitasking-demo/: main.swift
cmake/: build.cmake  config.cmake
config/: environment.config  settings.config
docs/api/: scheduler_api.md  task_api.md
docs/design/: architecture.md  design_principles.md
examples/advanced/: advanced_example.swift  complex_task.swift
examples/basic/: basic_example.swift  simple_task.swift
examples/integration/: combined_tasks.swift  integration_example.swift
libmultitasking.xcodeproj/: project.pbxproj
man/: multitasking.1  multitasking_scheduler.1
os/: os_integration.swift  os_support.swift
private/: private_config.swift  private_tasks.swift
rc/core/: Task.swift
resolver/: dependency_resolver.swift  module_resolver.swift
scripts/: smoke_test.sh
src/advanced_scheduling/: DeadlineScheduler.swift  FairScheduler.swift  LoadBalancer.swift  PriorityScheduler.swift
src/core/: ObjectiveCTask.h  ObjectiveCTask.m  ObjectiveCTaskWrapper.h  ObjectiveCTaskWrapper.mm  PerformanceMonitor.swift  (+6 more)
xcodeconfig/: debug.xcconfig  release.xcconfig
xcodescripts/: postbuild.sh  prebuild.sh
(+12 files in other folders)
